<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_layout_margins"
    android:columnCount="1"
    android:orientation="horizontal"
    android:rowCount="10"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/welcomeText"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="@string/welcomeMessage"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/welcome_message"
        android:layout_row="1"
        android:padding="@dimen/relative_margin_top2"
        android:text="@string/timeSpent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtTimeFormat"
        android:layout_width="185dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginBottom="@dimen/relative_margin_top"
        android:layout_row="2"
        android:gravity="center_horizontal"
        android:text="@string/timeFormat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtAnalysisMsg"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="@dimen/relative_margin_top2"
        android:layout_row="3"
        android:gravity="fill_horizontal|center"
        android:text="@string/analysisMessage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_column="0"
        android:layout_margin="@dimen/relative_margin_top"
        android:layout_marginTop="@dimen/relative_margin_top"
        android:layout_row="4" >

    </ListView>

    <TextView
        android:id="@+id/TextView04"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_marginBottom="2dp"
        android:layout_row="5"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/relative_margin_top2"
        android:text="@string/totalCalls"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_marginBottom="2dp"
        android:layout_row="6"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/relative_margin_top2"
        android:text="@string/totalTexting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_marginBottom="2dp"
        android:layout_row="7"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/relative_margin_top2"
        android:text="@string/totalGames"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_marginBottom="2dp"
        android:layout_row="8"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/relative_margin_top2"
        android:text="@string/totalOthers"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

</GridLayout>
